--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,9 +13,14 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Von">
         <activity
-            android:name=".ContactSync"
-            android:windowSoftInputMode="adjustPan"
+            android:name=".ChatActivity"
+            android:fitsSystemWindows="true"
+            android:windowSoftInputMode="adjustResize"
             android:exported="false" />
+        <activity
+            android:name=".ContactSync"
+            android:exported="false"
+            android:windowSoftInputMode="adjustPan" />
         <activity
             android:name=".InProfile"
             android:exported="false" />
