--- a/build.gradle
+++ b/build.gradle
@@ -1,18 +1,21 @@
 buildscript {
     ext.kotlin_version = '1.7.0-RC2'
     dependencies {
-        classpath 'com.android.tools.build:gradle:7.1.3'
+        classpath 'com.android.tools.build:gradle:7.2.0'
         classpath 'com.google.gms:google-services:4.3.10'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
     }
     repositories {
+        jcenter()
         mavenCentral()
+        google()
     }
 }// Top-level build file where you can add configuration options common to all sub-projects/modules.
 plugins {
-    id 'com.android.application' version '7.1.3' apply false
-    id 'com.android.library' version '7.1.3' apply false
+    id 'com.android.application' version '7.2.0' apply false
+    id 'com.android.library' version '7.2.0' apply false
 }
+
 
 task clean(type: Delete) {
     delete rootProject.buildDir
