--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,7 @@ plugins {
 apply plugin: 'kotlin-android'
 
 android {
-    compileSdk 32
+    compileSdk 33
 
     viewBinding {
         enabled = true
@@ -32,6 +32,7 @@ android {
         targetCompatibility JavaVersion.VERSION_1_8
     }
     namespace 'com.karankulx.von'
+    buildToolsVersion '33.0.0'
 }
 
 dependencies {
