--- a/app/build.gradle
+++ b/app/build.gradle
@@ -60,6 +60,8 @@ dependencies {
     implementation 'com.github.tbruyelle:rxpermissions:0.12'
     implementation 'io.reactivex.rxjava2:rxjava:2.2.12'
     implementation 'com.squareup.picasso:picasso:2.5.2'
-    implementation 'net.alhazmy13.MediaPicker:libary:2.4.4'
+    implementation 'com.github.jaiselrahman:FilePicker:1.3.2'
+    implementation 'com.guolindev.permissionx:permissionx:1.6.4'
+    implementation 'com.iceteck.silicompressorr:silicompressor:2.2.4'
 }
 
