--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,7 +36,6 @@ android {
 }
 
 dependencies {
-
     implementation 'androidx.appcompat:appcompat:1.4.1'
     implementation 'com.google.android.material:material:1.6.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
@@ -62,6 +61,10 @@ dependencies {
     implementation 'com.squareup.picasso:picasso:2.5.2'
     implementation 'com.github.jaiselrahman:FilePicker:1.3.2'
     implementation 'com.guolindev.permissionx:permissionx:1.6.4'
-    implementation 'com.iceteck.silicompressorr:silicompressor:2.2.4'
+    implementation 'nl.bravobit:android-ffmpeg:1.1.7'
+    implementation 'com.googlecode.mp4parser:isoparser:1.1.22'
+    implementation "com.arthenica:mobile-ffmpeg-full:4.4"
+    implementation "org.florescu.android.rangeseekbar:rangeseekbar-library:0.3.0"
+
 }
 
