--- a/app/build.gradle
+++ b/app/build.gradle
@@ -71,5 +71,6 @@ dependencies {
     implementation "com.google.android.exoplayer:exoplayer-hls:2.18.0"
     implementation "com.google.android.exoplayer:exoplayer-smoothstreaming:2.18.0"
     implementation "com.google.android.exoplayer:exoplayer-ui:2.18.0"
+    implementation "com.github.pgreze:android-reactions:1.6"
 }
 
